update from laptop

--- a/Chrome/ezman_updater/manifest.json
+++ b/Chrome/ezman_updater/manifest.json
@@ -16,16 +16,16 @@
         "default_title": "ezman_updater",
         "default_popup": "popup.html"
     },
-	"permissions": ["tabs", "activeTab", "http://*/*", "https://*/*", "<all_urls>"],
+	"permissions": ["tabs", "activeTab", "*://*/ezman/*"],
 	"content_security_policy": "script-src 'self' https://ajax.aspnetcdn.com; object-src 'self'",
 	"content_scripts": [
         {
-            "matches": ["http://*/*", "https://*/*"],
+            "matches": ["*://*/ezman/*"],
             "js": ["after_load.js"],
 			"run_at": "document_end"
         },
 		{
-            "matches": ["http://*/*", "https://*/*"],
+            "matches": ["*://*/ezman/*"],
             "js": ["before_load.js"],
 			"run_at": "document_start"
         }
