--- a/Chrome/ezman_updater/manifest.json
+++ b/Chrome/ezman_updater/manifest.json
@@ -17,7 +17,7 @@
         "default_popup": "popup.html"
     },
 	"background": {
-    "scripts": ["background.js"]
+    "scripts": ["jquery-3.1.1.js", "background.js"]
 	},
 	"permissions": ["tabs", "activeTab", "storage", "*://*/ezman/*"],
 	"content_security_policy": "script-src 'self' https://ajax.aspnetcdn.com; object-src 'self'",
