--- a/Unity Projects/Tu_RollABall/Tu_RollABall.csproj
+++ b/Unity Projects/Tu_RollABall/Tu_RollABall.csproj
@@ -77,7 +77,9 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\rotator.cs" />
+    <Compile Include="Assets\Scripts\RandomPosition.cs" />
+    <Compile Include="Assets\Scripts\ReverseRotator.cs" />
+    <Compile Include="Assets\Scripts\Rotator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
